[tool.poetry]
name = "o1visa_evaluation"
version = "0.1.0"
description = "O-1 Visa Evaluation Tool"
authors = ["Richard Chen <richardchen100@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.10.7"
fastapi = "==0.112.0"
uvicorn = "==0.30.6"
python-dotenv = "1.0.1"
openai = "==1.40.6"
langchain = "==0.2.14"
crewai = { extras = ["tools"], version = "^0.51.1" }
scholarly = "^1.7.11"
python-multipart = "^0.0.9"
langchain-anthropic = "^0.1.23"
requests = "^2.32.3"



[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"